Create HWPX documents from templates
